@@ -16,7 +16,7 @@
 
   <groupId>com.azure</groupId>
   <artifactId>azure-search</artifactId>
-  <version>1.0.0-beta.2</version> <!-- {x-version-update;com.azure:azure-search;current} -->
+  <version>11.0.0-beta.1</version> <!-- {x-version-update;com.azure:azure-search;current} -->
   <packaging>jar</packaging>
 
   <properties>
@@ -29,12 +29,12 @@
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core</artifactId>
-      <version>1.3.0-beta.2</version> <!-- {x-version-update;unreleased_com.azure:azure-core;dependency} -->
+      <version>1.3.0</version> <!-- {x-version-update;com.azure:azure-core;dependency} -->
     </dependency>
     <dependency>
       <groupId>com.azure</groupId>
       <artifactId>azure-core-http-netty</artifactId>
-      <version>1.4.0-beta.2</version> <!-- {x-version-update;unreleased_com.azure:azure-core-http-netty;dependency} -->
+      <version>1.4.0</version> <!-- {x-version-update;com.azure:azure-core-http-netty;dependency} -->
     </dependency>
 
     <!-- Added this dependency to include necessary annotations used by reactor core.
@@ -145,6 +145,7 @@
             <configuration>
               <argLine>
                 --add-exports com.azure.core/com.azure.core.implementation.http=ALL-UNNAMED
+                --add-opens com.azure.core/com.azure.core.util=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search.models=ALL-UNNAMED
                 --add-opens com.azure.search/com.azure.search.implementation=ALL-UNNAMED
